Fixed display name overflow in navbar

--- a/hobbysite/static/styles/base.css
+++ b/hobbysite/static/styles/base.css
@@ -64,6 +64,8 @@ nav a {
     vertical-align: middle;
     color: white;
     border-radius: 5px;
+    display: flex;
+    justify-content: right;
 }
 nav > div {
     display: flex;
@@ -161,6 +163,9 @@ nav > div:last-child > div:last-child > a {
 nav > div:last-child p {
     margin: 0;
     color: black;
+    max-width: 6rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .profile-dropdown > ul > li > a > p {
     margin: 0;
